--- a/majorproject/resources.html
+++ b/majorproject/resources.html
@@ -24,7 +24,7 @@
 	justify-content: center;
 }
 .container div {
-	width: 33%;
+	width: 50%;
 }
 @media (max-width: 600px) {
   .container {
@@ -74,10 +74,24 @@
 		</ul>
 
 	</nav>
-<h2>Self-Help Resources</h2>
-  <h3>Only need a few pointers for a small project? These free online resources may be able to help!</h3>
+<h2>DIY Resources</h2>
+  <h3>Only need a few pointers for a small project? These resources may be able to help!</h3>
 	<div class="container">
-	
+	<div>
+		<h3>Writing and Editing</h3>
+		<ul>
+			<li>Purdue University's <a href="https://owl.purdue.edu/owl/index.html">Online Writing Lab</a></li>
+			<li>Chicago Manual of Style <a href="https://www.chicagomanualofstyle.org/home.html">Online</a> (Note: some features require subscription)</li>
+			<li>White and Strunk's <i>The Elements of Style</i>. Check your local library if you don't want to pay for a copy. Also available as an audiobook.</li>
+		</ul>
+	</div>
+		<div>
+			<h3>Web Design</h3>
+			<ul>
+				<li><a href="https://www.w3schools.com/">W3Schools</a> - a fantastic resource for learning web coding</li>
+				<li>Geeks for Geeks <a href="https://www.geeksforgeeks.org/websites-apps/web-design/#">web design tutorial</a>, covering both design theory and coding basics</li>
+			</ul>
+		</div>
 	</div>
 	
 	<!-- HTML elements here -->
