--- a/majorproject/resources.html
+++ b/majorproject/resources.html
@@ -13,6 +13,13 @@
 		h2, h3 {
   text-align: center;
 }
+	img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 100%;
+	height: auto;			
+}
 	body {
   margin-left: 35px;
   margin-right: 35px;
@@ -75,6 +82,7 @@
 
 	</nav>
 <h2>DIY Resources</h2>
+	<img src="Library.jpg" alt="library bookshelf">
   <h3>Only need a few pointers for a small project? These resources may be able to help!</h3>
 	<div class="container">
 	<div>
@@ -101,5 +109,6 @@
   <p>&copy; Pro Writing Whidbey<br>
   916 SE Bayshore Dr<br>
   Oak Harbor, WA  98277<br>
+	  Photo by <a href="https://unsplash.com/@inakihxz?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Iñaki del Olmo</a> on <a href="https://unsplash.com/photos/assorted-title-of-books-piled-in-the-shelves-NIJuEQw0RKg?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
 </footer>
 </html>
