--- a/majorproject/resources.html
+++ b/majorproject/resources.html
@@ -88,16 +88,16 @@
 	<div>
 		<h3>Writing and Editing</h3>
 		<ul>
-			<li>Purdue University's <a href="https://owl.purdue.edu/owl/index.html">Online Writing Lab</a></li>
-			<li>Chicago Manual of Style <a href="https://www.chicagomanualofstyle.org/home.html">Online</a> (Note: some features require subscription)</li>
+			<li>Purdue University's <a href="https://owl.purdue.edu/owl/index.html" target="_blank">Online Writing Lab</a></li>
+			<li>Chicago Manual of Style <a href="https://www.chicagomanualofstyle.org/home.html" target="_blank">Online</a> (Note: some features require subscription)</li>
 			<li>White and Strunk's <i>The Elements of Style</i>. Check your local library if you don't want to pay for a copy. Also available as an audiobook.</li>
 		</ul>
 	</div>
 		<div>
 			<h3>Web Design</h3>
 			<ul>
-				<li><a href="https://www.w3schools.com/">W3Schools</a> - a fantastic resource for learning web coding</li>
-				<li>Geeks for Geeks <a href="https://www.geeksforgeeks.org/websites-apps/web-design/#">web design tutorial</a>, covering both design theory and coding basics</li>
+				<li><a href="https://www.w3schools.com/" target="_blank">W3Schools</a> - a fantastic resource for learning web coding</li>
+				<li>Geeks for Geeks <a href="https://www.geeksforgeeks.org/websites-apps/web-design/#" target="_blank">web design tutorial</a>, covering both design theory and coding basics</li>
 			</ul>
 		</div>
 	</div>
