--- a/majorproject/portfolio.html
+++ b/majorproject/portfolio.html
@@ -11,7 +11,7 @@
 	<!-- external and internal CSS -->
 	<link rel="stylesheet" href="styles.css" media="all">
 	<style>
-		h2 {
+		h2, h3 {
   text-align: center;
 }
 	body {
@@ -80,17 +80,17 @@
 		<div>
 			<h3>Writing/Editing Samples</h3>
 			<ul>
-				<li><a href="majorproject/405 Project 2 Memo Copy.pdf" target="_blank">Memo recommending slideshow edits</a></li>
-				<li><a href="majorproject/Division C Conference Registration.pdf" target="_blank">Event registration form</a></li>
-				<li><a href="majorproject/Research Report.pdf" target="_blank">Research report</a>(Note: Some contributors' names have been removed for privacy)</li>
-				<li><a href="majorproject/SmithInfographic.jpg" target="_blank">Infographic</a></li>
+				<li><a href="/majorproject/405 Project 2 Memo Copy.pdf" target="_blank">Memo recommending slideshow edits</a></li>
+				<li><a href="/majorproject/Division C Conference Registration.pdf" target="_blank">Event registration form</a></li>
+				<li><a href="/majorproject/Research Report.pdf" target="_blank">Research report</a> (Note: Some contributors' names have been removed for privacy)</li>
+				<li><a href="/majorproject/SmithInfographic.jpg" target="_blank">Infographic</a></li>
 			</ul>
 		</div>
 		<div>
 			<h3>Web Design Samples</h3>
 			<ul>
 				<li>This website!</li>
-				<li><a href="https://spaboolly.wixsite.com/disaster-to-design">Disaster to Design</a></li>
+				<li><a href="https://spaboolly.wixsite.com/disaster-to-design" target="_blank">Disaster to Design</a></li>
 			</ul>
 		</div>
 	</div>
@@ -103,6 +103,7 @@
   Oak Harbor, WA  98277<br>
 </footer>
 </html>
+
 
 
 
