--- a/majorproject/about.html
+++ b/majorproject/about.html
@@ -20,11 +20,6 @@ body {
   margin-right: 35px;
 }
 		
-footer {
-	margin-right: 0px;
-	margin-left: 0px;
-}
-		
 img {
   display: block;
   margin-left: auto;
@@ -100,13 +95,14 @@ img {
 			<img src="EvelynSmith.jpeg" alt="Evelyn Smith">
 		</div>
 	</div>
-<footer>
+<footer style="margin-right: 0px; margin-left: 0px;">
   <p>&copy; Pro Writing Whidbey<br>
   916 SE Bayshore Dr<br>
   Oak Harbor, WA  98277<br>
 </footer>
 </body>
 </html>
+
 
 
 
