--- a/majorproject/about.html
+++ b/majorproject/about.html
@@ -95,13 +95,14 @@ img {
 			<img src="EvelynSmith.jpeg" alt="Evelyn Smith">
 		</div>
 	</div>
-<footer style="margin-right: 0px; margin-left: 0px;">
+<footer style="margin-right: 0; margin-left: 0;">
   <p>&copy; Pro Writing Whidbey<br>
   916 SE Bayshore Dr<br>
   Oak Harbor, WA  98277<br>
 </footer>
 </body>
 </html>
+
 
 
 
