--- a/majorproject/contact.html
+++ b/majorproject/contact.html
@@ -11,15 +11,22 @@
 	<!-- external and internal CSS -->
 	<link rel="stylesheet" href="styles.css" media="all">
 	<style>
-				h2 {
+h2 {
   text-align: center;
 }
-		div {
-  margin: auto;
-		width: 68%;
-	  max-width: 850px;
+		
+body {
+  margin-left: 35px;
+  margin-right: 35px;
 }
-		form {
+		
+div {
+  margin: auto;
+	width: 68%;
+	max-width: 850px;
+}
+		
+form {
   border-radius: 5px;
   background-color: rgb(103, 175, 203, 0.5);
   padding: 20px;
@@ -35,7 +42,8 @@ input[type=text], select {
   box-sizing: border-box;
 	font-size: 16px
 }
-		input[type=email], select {
+		
+input[type=email], select {
   width: 100%;
   padding: 12px;
   margin: 8px 0;
@@ -45,6 +53,7 @@ input[type=text], select {
   box-sizing: border-box;
 	font-size: 16px
 }
+		
 input[type=text]:focus {
   border: 3px solid #1A3E4C;
 }
@@ -72,14 +81,15 @@ input[type=submit]:hover {
   border-radius: 4px;
   font-size: 16px;
 }
-		@media (max-width: 600px) {
-div {
-	width: 100%;
+		
+@media (max-width: 600px) {
+	div {
+		width: 100%;
+	}
+	input[type=checkbox] {
+		display: block
+	}
 }
-			input[type=checkbox] {
-				display: block
-}
-		}
 		/* in-file CSS here */
 	</style>
 
@@ -95,10 +105,8 @@ div {
 <body>
 		<nav>
 		<a id="navBurger">&#9776;</a>
-
 		<ul>
 			<li><a href="/majorproject/index.html">Home</a></li>
-
 			<li><a href="#">Services</a>
 				<ul>
 					<li><a href="/majorproject/writing.html">Writing</a></li>
@@ -115,50 +123,46 @@ div {
 			</li>
 			<li><a href="/majorproject/contact.html">Contact Us</a></li>
 			<li><a href="/majorproject/resources.html">Resources</a></li>
-			
 		</ul>
-
-	</nav>
-	
-	<h2>Contact Us</h2>
-	
-	<div>
+	</nav>	
+<h2>Contact Us</h2>	
+<div>
 <form action="/majorproject/thanks.html">
-  <label for="name">Name:</label>
-  <input type="text" id="name" name="name" placeholder="ex. John Smith">
+  	<label for="name">Name:</label>
+  	<input type="text" id="name" name="name" placeholder="ex. John Smith">
 	<label for="email">Email:</label>
-  <input type="email" id="email" name="email" placeholder="ex. johnsmith@website.com">
-	 <label for="title">Preferred form of address:</label>
-  <select id="title" name="title">
-    <option value="ms">Ms.</option>
-    <option value="mr">Mr.</option>
-    <option value="mrs">Mrs.</option>
-    <option value="dr">Dr.</option>
-     <option value="prof">Prof.</option>
-     <option value="name">First name</option>
-  </select>
+  	<input type="email" id="email" name="email" placeholder="ex. johnsmith@website.com">
+	<label for="title">Preferred form of address:</label>
+  	<select id="title" name="title">
+    	<option value="ms">Ms.</option>
+    	<option value="mr">Mr.</option>
+    	<option value="mrs">Mrs.</option>
+    	<option value="dr">Dr.</option>
+    	<option value="prof">Prof.</option>
+    	<option value="name">First name</option>
+  	</select>
 	<p>Which service(s) are you interested in?</p>
-	 <input type="checkbox" id="service1" name="service1" value="Writing">
-  <label for="service1"> Writing</label>
-  <input type="checkbox" id="service2" name="service2" value="Editing">
-  <label for="service2"> Editing</label>
-  <input type="checkbox" id="service3" name="service3" value="Web">
-  <label for="service3"> Web Design</label>
-   <input type="checkbox" id="service4" name="service4" value="Other">
-  <label for="service4"> Other or General Inquiry</label>
- <textarea name="message" style="width:100%; height:200px;" placeholder="Type message here."></textarea>
-  <input type="submit" value="Submit">
+	<input type="checkbox" id="service1" name="service1" value="Writing">
+  	<label for="service1"> Writing</label>
+  	<input type="checkbox" id="service2" name="service2" value="Editing">
+  	<label for="service2"> Editing</label>
+  	<input type="checkbox" id="service3" name="service3" value="Web">
+  	<label for="service3"> Web Design</label>
+   	<input type="checkbox" id="service4" name="service4" value="Other">
+  	<label for="service4"> Other or General Inquiry</label>
+ 	<textarea name="message" style="width:100%; height:200px;" placeholder="Type message here."></textarea>
+  	<input type="submit" value="Submit">
 </form> 
-	</div>
+</div>
 	<!-- HTML elements here -->
-
-</body>
-		<footer>
+<footer>
   <p>&copy; Pro Writing Whidbey<br>
   916 SE Bayshore Dr<br>
   Oak Harbor, WA  98277<br>
 </footer>
+</body>
 </html>
+
 
 
 
