--- a/majorproject/editing.html
+++ b/majorproject/editing.html
@@ -11,29 +11,34 @@
 	<!-- external and internal CSS -->
 	<link rel="stylesheet" href="styles.css" media="all">
 	<style>
-	h2 {
+h2 {
   text-align: center;
 }
-			body {
+		
+body {
   margin-left: 35px;
   margin-right: 35px;
-	}
-			img {
+}
+			
+img {
   display: block;
   margin-left: auto;
   margin-right: auto;
   max-width: 100%;
 	height: auto;			
 }
-		.container {
+		
+.container {
   display: flex;
 	flex-direction: row;
 	justify-content: center;
 }
+		
 .container div {
 	width: 50%;
 }
-		table {
+		
+table {
   border-collapse: collapse;
   width: 100%;
 }
@@ -44,7 +49,7 @@ td, th {
 }
 
 tr:nth-child(even){background-color: #f2f2f2;}
-		tr:nth-child(odd){background-color: white;}
+tr:nth-child(odd){background-color: white;}
 
 tr:hover {background-color: #ddd;}
 
@@ -55,13 +60,14 @@ th {
   background-color: rgb(103, 175, 203, 0.5);
   color: black;
 }
+		
 @media (max-width: 600px) {
   .container {
     flex-direction: column;
-  }
+	}
 	.container div {
 	width: 100%;
-}
+	}
 }
 		/* in-file CSS here */
 	</style>
@@ -78,10 +84,8 @@ th {
 <body>
 	<nav>
 		<a id="navBurger">&#9776;</a>
-
 		<ul>
 			<li><a href="/majorproject/index.html">Home</a></li>
-
 			<li><a href="#">Services</a>
 				<ul>
 					<li><a href="/majorproject/writing.html">Writing</a></li>
@@ -97,63 +101,62 @@ th {
 				</ul>
 			</li>
 			<li><a href="/majorproject/contact.html">Contact Us</a></li>
-			<li><a href="/majorproject/resources.html">Resources</a></li>
-			
+			<li><a href="/majorproject/resources.html">Resources</a></li>	
 		</ul>
-
 	</nav>
 	<!-- HTML elements here -->
 <h2>Editing Services</h2>
-	<div class="container">
-		<div>
-	<img src="EditWithoutMercy.jpg" alt="Edit without mercy">
-		</div>
-		<div>
-			<table>
-				<tr>
-					<th>Service</th>
-					<th>Estimated Price</th>
-				</tr>
-					<tr>
-						<td>General Assessment</td>
-						<td>$0.02/word</td>
-					</tr>
-				<tr>
-					<td>Proofreading</td>
-					<td>$0.02/word</td>
-				</tr>
-				<tr>
-					<td>Copyediting</td>
-					<td>$0.03/word</td>
-				</tr>
-				<tr>
-					<td>Substantive Editing</td>
-					<td>$0.04/word</td>
-				</tr>
-				<tr>
-					<td>Line Editing</td>
-					<td>$0.05/word</td>
-				</tr>
-			</table>
+<div class="container">
+	<div>
+		<img src="EditWithoutMercy.jpg" alt="Edit without mercy">
+	</div>
+	<div>
+		<table>
+			<tr>
+				<th>Service</th>
+				<th>Estimated Price</th>
+			</tr>
+			<tr>
+				<td>General Assessment</td>
+				<td>$0.02/word</td>
+			</tr>
+			<tr>
+				<td>Proofreading</td>
+				<td>$0.02/word</td>
+			</tr>
+			<tr>
+				<td>Copyediting</td>
+				<td>$0.03/word</td>
+			</tr>
+			<tr>
+				<td>Substantive Editing</td>
+				<td>$0.04/word</td>
+			</tr>
+			<tr>
+				<td>Line Editing</td>
+				<td>$0.05/word</td>
+			</tr>
+		</table>
 		<p><i>Please note: All prices shown are estimates and may vary slightly depending on the exact nature of specific projects.</i></p>
 		<p>Please <a href="/majorproject/contact.html">contact us</a> for information about editing of projects other than text-based documents, or if you are unsure about which type of editing would best suit your needs.</p>
 		<h3>Service Details:</h3>
 		<p><b>General Assessment -</b> Reading over a document and giving general feedback on the content, layout, etc. No specific edits provided.</p>
-		<p><b>Proofreading -</b> A final "fresh eyes" check on a document that has usually already been edited ato be sure it is ready for publication. Any necessary edits will be submitted.</p>
+		<p><b>Proofreading -</b> A "fresh eyes" check on a document that has usually already been edited, as a final check to be sure it is ready for publication. Any necessary edits will be submitted.</p>
 		<p><b>Copyediting -</b> Most basic form of editing, generally limited to correcting typos, spelling and grammar errors, punctuation, etc.</p>
 		<p><b>Substantive Editing -</b> A medium-level edit that includes copyediting plus editing of overall design, layout, and suitability of content for the intended audience.</p>
 		<p><b>Line Editing -</b> An extremely thorough edit providing extensive revisions throughout the document.</p>
 		<p>At the moment, we are not able to offer fact-checking or research services.</p>
 		</div>
 	</div>
-</body>
-		<footer>
+<footer>
   <p>&copy; Pro Writing Whidbey<br>
   916 SE Bayshore Dr<br>
   Oak Harbor, WA  98277<br>
-	Photo by <a href="https://unsplash.com/@oddityandgrace?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">hannah grace</a> on <a href="https://unsplash.com/photos/a-white-box-with-writing-on-it-next-to-a-plant-j9JoYpaJH3A?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-  </p></footer>  
+	Photo by <a href="https://unsplash.com/@oddityandgrace?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">hannah grace</a> on <a href="https://unsplash.com/photos/a-white-box-with-writing-on-it-next-to-a-plant-j9JoYpaJH3A?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></p>
+</footer> 
+</body> 
 </html>
+
 
 
 
