--- a/majorproject/thanks.html
+++ b/majorproject/thanks.html
@@ -11,8 +11,13 @@
 	<!-- external and internal CSS -->
 	<link rel="stylesheet" href="styles.css" media="all">
 	<style>
-				h2, h3 {
+h2, h3 {
   text-align: center;
+}
+
+body {
+  margin-left: 35px;
+  margin-right: 35px;
 }
 		/* in-file CSS here */
 	</style>
@@ -29,10 +34,8 @@
 <body>
 	<nav>
 		<a id="navBurger">&#9776;</a>
-
 		<ul>
 			<li><a href="/majorproject/index.html">Home</a></li>
-
 			<li><a href="#">Services</a>
 				<ul>
 					<li><a href="/majorproject/writing.html">Writing</a></li>
@@ -48,22 +51,20 @@
 				</ul>
 			</li>
 			<li><a href="/majorproject/contact.html">Contact Us</a></li>
-			<li><a href="/majorproject/resources.html">Resources</a></li>
-			
+			<li><a href="/majorproject/resources.html">Resources</a></li>		
 		</ul>
-
 	</nav>
 <h2>Thank You!</h2>
-	<h3>You should receive a response to your inquiry shortly.</h3>
+<h3>You should receive a response to your inquiry shortly.</h3>
 	<!-- HTML elements here -->
-
-</body>
-		<footer>
+<footer>
   <p>&copy; Pro Writing Whidbey<br>
   916 SE Bayshore Dr<br>
   Oak Harbor, WA  98277<br>
 </footer>
+</body>
 </html>
+
 
 
 
