--- a/majorproject/web.html
+++ b/majorproject/web.html
@@ -11,29 +11,34 @@
 	<!-- external and internal CSS -->
 	<link rel="stylesheet" href="styles.css" media="all">
 	<style>
-	h2 {
+h2 {
   text-align: center;
 }
-	body {
+		
+body {
   margin-left: 35px;
   margin-right: 35px;
-	}
-			img {
+}
+		
+img {
   display: block;
   margin-left: auto;
   margin-right: auto;
   max-width: 100%;
 	height: auto;			
 }
-		.container {
+		
+.container {
   display: flex;
 	flex-direction: row;
 	justify-content: center;
 }
+		
 .container div {
 	width: 50%;
 }
-		table {
+		
+table {
   border-collapse: collapse;
   width: 100%;
 }
@@ -44,7 +49,7 @@ td, th {
 }
 
 tr:nth-child(even){background-color: #f2f2f2;}
-		tr:nth-child(odd){background-color: white;}
+tr:nth-child(odd){background-color: white;}
 
 tr:hover {background-color: #ddd;}
 
@@ -55,13 +60,14 @@ th {
   background-color: rgb(103, 175, 203, 0.5);
   color: black;
 }
+		
 @media (max-width: 600px) {
   .container {
     flex-direction: column;
   }
 	.container div {
 	width: 100%;
-}
+	}
 }
 		/* in-file CSS here */
 	</style>
@@ -78,10 +84,8 @@ th {
 <body>
 	<nav>
 		<a id="navBurger">&#9776;</a>
-
 		<ul>
 			<li><a href="/majorproject/index.html">Home</a></li>
-
 			<li><a href="#">Services</a>
 				<ul>
 					<li><a href="/majorproject/writing.html">Writing</a></li>
@@ -97,10 +101,8 @@ th {
 				</ul>
 			</li>
 			<li><a href="/majorproject/contact.html">Contact Us</a></li>
-			<li><a href="/majorproject/resources.html">Resources</a></li>
-			
+			<li><a href="/majorproject/resources.html">Resources</a></li>		
 		</ul>
-
 	</nav>
 	<!-- HTML elements here -->
 <h2>Web Design</h2>
@@ -130,14 +132,15 @@ th {
 			</p>
 		</div>
 	</div>
-</body>
-	<footer>
+<footer>
   <p>&copy; Pro Writing Whidbey<br>
   916 SE Bayshore Dr<br>
   Oak Harbor, WA  98277<br>
-Photo by <a href="https://unsplash.com/@uxindo?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">UX Indonesia</a> on <a href="https://unsplash.com/photos/person-writing-on-white-paper-qC2n6RQU4Vw?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>   
-  </p></footer>
+Photo by <a href="https://unsplash.com/@uxindo?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">UX Indonesia</a> on <a href="https://unsplash.com/photos/person-writing-on-white-paper-qC2n6RQU4Vw?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></p>
+</footer>
+</body>
 </html>
+
 
 
 
