--- a/majorproject/faq.html
+++ b/majorproject/faq.html
@@ -88,7 +88,7 @@ img {
 		<p>First step is to <a href="/majorproject/contact.html">Contact Us</a> with as much information as possible about your project. From there, we will work with you to hash out specific details, plus agree on a timeline and (if applicable) rate of payment. When the final draft is approved, you will receive the relevant finished product(s) and an invoice.</p>
 		<h3>Do you offer other services besides what is listed here?</h3>
 		<p>Absolutely! Our website lists only the most common examples, but we can do just about any type of project that uses the written word to convey information. We can also do some graphic design projects, such as infographics.</p>
-		<h3>What payments do you use?</h3>
+		<h3>What forms of payment do you accept?</h3>
 		<p>We can accept pretty much any method except cash. Method of payment is generally based on client preference.</p>
 		<h3>Where exactly is Whidbey Island? Do you only work with local clients?</h3>
 		<p>Whidbey Island is just off the coast of western Washington State, in the US, a little bit northwest of Seattle. So long as the work can be done remotely, we will happily work with clients anywhere!</p>
@@ -108,6 +108,7 @@ Photo by <a href="https://unsplash.com/@two_tees?utm_source=unsplash&utm_medium=
 </footer>
 </body>
 </html>
+
 
 
 
