--- a/majorproject/contact.html
+++ b/majorproject/contact.html
@@ -15,11 +15,6 @@ h2 {
   text-align: center;
 }
 		
-body {
-  margin-left: 35px;
-  margin-right: 35px;
-}
-		
 div {
   margin: auto;
 	width: 68%;
@@ -125,6 +120,7 @@ input[type=submit]:hover {
 			<li><a href="/majorproject/resources.html">Resources</a></li>
 		</ul>
 	</nav>	
+<section>
 <h2>Contact Us</h2>	
 <div>
 <form action="/majorproject/thanks.html">
@@ -155,6 +151,7 @@ input[type=submit]:hover {
 </form> 
 </div>
 	<!-- HTML elements here -->
+</section>
 <footer>
   <p>&copy; Pro Writing Whidbey<br>
   916 SE Bayshore Dr<br>
@@ -162,6 +159,7 @@ input[type=submit]:hover {
 </footer>
 </body>
 </html>
+
 
 
 
