--- a/majorproject/editing.html
+++ b/majorproject/editing.html
@@ -14,11 +14,6 @@
 h2 {
   text-align: center;
 }
-		
-body {
-  margin-left: 35px;
-  margin-right: 35px;
-}
 			
 img {
   display: block;
@@ -105,6 +100,7 @@ th {
 		</ul>
 	</nav>
 	<!-- HTML elements here -->
+<section>
 <h2>Editing Services</h2>
 <div class="container">
 	<div>
@@ -148,6 +144,7 @@ th {
 		<p>At the moment, we are not able to offer fact-checking or research services.</p>
 		</div>
 	</div>
+</section>
 <footer>
   <p>&copy; Pro Writing Whidbey<br>
   916 SE Bayshore Dr<br>
@@ -156,6 +153,7 @@ th {
 </footer> 
 </body> 
 </html>
+
 
 
 
