--- a/majorproject/faq.html
+++ b/majorproject/faq.html
@@ -15,11 +15,6 @@ h2 {
   text-align: center;
 }
 		
-body {
-  margin-left: 35px;
-  margin-right: 35px;
-}
-		/* in-file CSS here */
 img {
   display: block;
   margin-left: auto;
@@ -81,6 +76,7 @@ img {
 			<li><a href="/majorproject/resources.html">Resources</a></li>	
 		</ul>
 	</nav>
+<section>
 <h2>Frequently Asked Questions</h2>	
 <div class="container">
 	<div>
@@ -99,6 +95,7 @@ img {
 		<img src="Question.jpg" alt="question mark">
 	</div>
 </div>
+</section>
 	<!-- HTML elements here -->
 <footer>
   <p>&copy; Pro Writing Whidbey<br>
@@ -108,6 +105,7 @@ Photo by <a href="https://unsplash.com/@two_tees?utm_source=unsplash&utm_medium=
 </footer>
 </body>
 </html>
+
 
 
 
