--- a/majorproject/index.html
+++ b/majorproject/index.html
@@ -15,11 +15,6 @@ h1, h2, h3, p {
   text-align: center;
 }
 		
-body {
-  margin-left: 35px;
-  margin-right: 35px;
-}
-		
 img {
   display: block;
   margin-left: auto;
@@ -98,6 +93,7 @@ img {
 			<li><a href="/majorproject/resources.html">Resources</a></li>		
 		</ul>
 	</nav>
+<section>
 <h1>Welcome to<br>Pro Writing Whidbey!</h1>
 	<img src="DPBridge2.jpg" alt="Deception Pass Bridge">
 	<h2>Whidbey Island's Premier Professional Writing Services</h2>
@@ -135,6 +131,7 @@ img {
 			<a href="/majorproject/web.html" class="button">Web Details</a>
 		</div>
 	</div>
+</section>
 	<!-- HTML elements here -->
 <footer>
   <p>&copy; Pro Writing Whidbey<br>
@@ -144,6 +141,7 @@ img {
 </footer>
 </body>
 </html>
+
 
 
 
