--- a/majorproject/portfolio.html
+++ b/majorproject/portfolio.html
@@ -15,11 +15,6 @@ h2, h3 {
   text-align: center;
 }
 		
-body {
-  margin-left: 35px;
-  margin-right: 35px;
-}
-		
 .container {
   display: flex;
 	flex-direction: row;
@@ -74,6 +69,7 @@ body {
 			<li><a href="/majorproject/resources.html">Resources</a></li>	
 		</ul>
 	</nav>
+<section>
 <h2>Portfolio</h2>
 	<div class="container">
 		<div>
@@ -93,6 +89,7 @@ body {
 			</ul>
 		</div>
 	</div>
+</section>
 	<!-- HTML elements here -->
 <footer>
   <p>&copy; Pro Writing Whidbey<br>
@@ -101,6 +98,7 @@ body {
 </footer>
 </body>
 </html>
+
 
 
 
