--- a/majorproject/resources.html
+++ b/majorproject/resources.html
@@ -21,11 +21,6 @@ img {
   max-width: 100%;
 	height: auto;			
 }
-		
-body {
-  margin-left: 35px;
-  margin-right: 35px;
-}
 
 .container {
   display: flex;
@@ -81,6 +76,7 @@ body {
 			<li><a href="/majorproject/resources.html">Resources</a></li>
 		</ul>
 	</nav>
+<section>
 <h2>DIY Resources</h2>
 <img src="Library.jpg" alt="library bookshelf">
 <h3>Only need a few pointers for a small project? These resources may be able to help!</h3>
@@ -101,7 +97,7 @@ body {
 		</ul>
 	</div>
 </div>
-	
+</section>
 	<!-- HTML elements here -->
 <footer>
   <p>&copy; Pro Writing Whidbey<br>
