--- a/majorproject/thanks.html
+++ b/majorproject/thanks.html
@@ -14,11 +14,6 @@
 h2, h3 {
   text-align: center;
 }
-
-body {
-  margin-left: 35px;
-  margin-right: 35px;
-}
 		/* in-file CSS here */
 	</style>
 
@@ -54,9 +49,10 @@ body {
 			<li><a href="/majorproject/resources.html">Resources</a></li>		
 		</ul>
 	</nav>
+<section>
 <h2>Thank You!</h2>
 <h3>You should receive a response to your inquiry shortly.</h3>
-	<!-- HTML elements here -->
+</section>
 <footer>
   <p>&copy; Pro Writing Whidbey<br>
   916 SE Bayshore Dr<br>
@@ -64,6 +60,7 @@ body {
 </footer>
 </body>
 </html>
+
 
 
 
