--- a/majorproject/web.html
+++ b/majorproject/web.html
@@ -15,11 +15,6 @@ h2 {
   text-align: center;
 }
 		
-body {
-  margin-left: 35px;
-  margin-right: 35px;
-}
-		
 img {
   display: block;
   margin-left: auto;
@@ -105,6 +100,7 @@ th {
 		</ul>
 	</nav>
 	<!-- HTML elements here -->
+<section>
 <h2>Web Design</h2>
 	<div class="container">
 		<div>
@@ -132,6 +128,7 @@ th {
 			</p>
 		</div>
 	</div>
+</section>
 <footer>
   <p>&copy; Pro Writing Whidbey<br>
   916 SE Bayshore Dr<br>
@@ -140,6 +137,7 @@ Photo by <a href="https://unsplash.com/@uxindo?utm_source=unsplash&utm_medium=re
 </footer>
 </body>
 </html>
+
 
 
 
