--- a/majorproject/writing.html
+++ b/majorproject/writing.html
@@ -15,11 +15,6 @@ h2 {
   text-align: center;
 }
 		
-body {
-  margin-left: 35px;
-  margin-right: 35px;
-}
-		
 img {
   display: block;
   margin-left: auto;
@@ -105,6 +100,7 @@ th {
 		</ul>
 	</nav>
 	<!-- HTML elements here -->
+<section>
 <h2>Writing Services</h2>
 <div class="container">
 	<div>
@@ -139,6 +135,7 @@ th {
 		</ul>
 	</div>
 </div>
+</section>
 <footer>
   <p>&copy; Pro Writing Whidbey<br>
   916 SE Bayshore Dr<br>
@@ -147,6 +144,7 @@ th {
 </footer>
 </body>
 </html>
+
 
 
 
