--- a/index.html
+++ b/index.html
@@ -24,32 +24,35 @@
 	<H1>Evelyn Z. Smith</H1>
 	<p>Student at WSU, majoring in English and writing.</p>
 	<a href="https://github.com/EeveeZSmith/eeveezsmith.github.io">Evelyn's GitHub Repository</a>
-	<H2>Activities</H2>
-	<ul>
-		<li><a href="/codelogs/log1.html">Code Log 1</a>
-</li>
-		<li><a href="/codelogs/log2.html">Code Log 2</a></li>
-		<li><a href="/codelogs/log3.html">Code Log 3</a></li>
-		<li><a href="/codelogs/log4.html">Code Log 4</a>
-</li>
-		<li><a href="/codelogs/log5.html">Code Log 5</a></li>
-	</ul>
-	<H2>Tiny Projects</H2>
-	<ul>
-		<li><a href="/favorite-recipe/index.html">Tiny Project 2</a></li>
-		<li>Tiny Project 3 <a href="/anni-albers/index.html">Version 1</a> <a href="/anni-albers/index2.html">Version 2</a></li>
-		<li><a href="/rhododendron/index.html">Tiny Project 4</a>
-</li>
-		<li><a href="/responsive-recipe/index.html">Tiny Project 6</a>
-</li>
-		<li><a href="/recipe-minisite/index.html">Tiny Project 7</a></li>
-		<li><a href="/dark-flower/index.html">Tiny Project 8</a></li>
-		<li><a href="/long-story/index.html">Tiny Project 9</a></li>
-	</ul>
-	<H2>Major Project</H2>
-	<a href="https://www.google.com/">Placeholder Link</a>
-
-	<p>This is a test.</p>
-
+<div class= "container">	
+	<div>
+		<H2>Code Log Activities</H2>
+			<ul>
+				<li><a href="/codelogs/log1.html">1: HTML Semantic Tags</a></li>
+				<li><a href="/codelogs/log2.html">2: CSS Measuring Units</a></li>
+				<li><a href="/codelogs/log3.html">3: CSS Media Queries</a></li>
+				<li><a href="/codelogs/log4.html">4: CSS Color</a></li>
+				<li><a href="/codelogs/log5.html">5: Images</a></li>
+				<li><a href="/codelogs/log6.html">6: Code References</a></li>
+			</ul>
+	</div>
+	<div>
+		<H2>Tiny Projects</H2>
+			<ul>
+				<li><a href="/favorite-recipe/index.html">TP 2: Favorite Recipe</a></li>
+				<li>TP 3: Anni Albers <a href="/anni-albers/index.html">Version 1</a> <a href="/anni-albers/index2.html">Version 2</a></li>
+				<li><a href="/rhododendron/index.html">TP 4: Rhododendron</a></li>
+				<li><a href="/responsive-recipe/index.html">TP 6: Responsive Recipe</a></li>
+				<li><a href="/recipe-minisite/index.html">TP 7: Recipe Minisite</a></li>
+				<li><a href="/dark-flower/index.html">TP 8: Dark Flower</a></li>
+				<li><a href="/long-story/index.html">TP 9: Long Story</a></li>
+			</ul>
+	</div>
+	<div>
+		<H2>Major Project</H2>
+		<p><a href="/majorproject/index.html">Pro Writing Whidbey</a><br>
+			A small business site offering professional writing, editing, and web design services. Geared toward other small business owners.</p>
+	</div>
+</div>
 </body>
 </html>
