--- a/index.html
+++ b/index.html
@@ -5,11 +5,40 @@
 	<!-- meta tags and title -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Page Title</title>
+	<title>Tiny Project 10</title>
 
 	<!-- external and internal CSS -->
 	<link rel="stylesheet" href="styles.css" media="all">
 	<style>
+body {
+	background-color: FloralWhite;
+	font-family: Verdana, sans-serif;
+  	font-size: 16px;
+	line-height: 1.6
+}
+
+h1, h2 {
+	font-family: Georgia, serif;
+}
+
+.container {
+  display: flex;
+	flex-direction: row;
+	justify-content: center;
+}
+		
+.container div {
+	width: 33%;
+}
+		
+@media (max-width: 600px) {
+  .container {
+    flex-direction: column;
+  }
+	.container div {
+	width: 100%;
+	}
+}
 		/* in-file CSS here */
 	</style>
 
