--- a/index.html
+++ b/index.html
@@ -21,6 +21,22 @@ h1, h2 {
 	font-family: Georgia, serif;
 }
 
+section {
+	text-align: center;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 100%;
+	height: auto;
+	border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 150px;
+}		
+		
 .container {
   display: flex;
 	flex-direction: row;
@@ -50,9 +66,12 @@ h1, h2 {
 
 </head>
 <body>
+<section>
 	<H1>Evelyn Z. Smith</H1>
 	<p>Student at WSU, majoring in English and writing.</p>
 	<a href="https://github.com/EeveeZSmith/eeveezsmith.github.io">Evelyn's GitHub Repository</a>
+	<img src="Pippin1.jpeg" alt="cat">
+</section>
 <div class= "container">	
 	<div>
 		<H2>Code Log Activities</H2>
