--- a/majorproject/index.html
+++ b/majorproject/index.html
@@ -48,6 +48,8 @@ img {
 		
 .container div {
 	width: 33%;
+	background-color: rgb(103, 175, 203, 0.5);
+  	border-radius: 10px;
 }
 		
 @media (max-width: 600px) {
@@ -141,6 +143,7 @@ img {
 </footer>
 </body>
 </html>
+
 
 
 
