--- a/majorproject/index.html
+++ b/majorproject/index.html
@@ -88,13 +88,12 @@ img {
 				<ul>
 			<li><a href="/majorproject/about.html">About Us</a></li>
 					<li><a href="/majorproject/faq.html">FAQ</a></li>
-					<li><a href="/majorproject/portfolio.html">Portfolio</a></li>
 				</ul>
 			</li>
-			<li><a href="/majorproject/contact.html">Contact Us</a></li>
 			<li><a href="/majorproject/resources.html">Resources</a></li>		
 		</ul>
 	</nav>
+<p style="border: 2px solid DarkSlateBlue; padding: 5px; background-color: GhostWhite;">Note: This site is for demo purposes only! To contact us, please visit our active website, <a href="www.prowritingwhidbey.com">ProWritingWhidbey.com</a>.</p>
 <section>
 <h1>Welcome to<br>Pro Writing Whidbey!</h1>
 	<img src="DPBridge2.jpg" alt="Deception Pass Bridge">
@@ -143,6 +142,7 @@ img {
 </footer>
 </body>
 </html>
+
 
 
 
