--- a/majorproject/index.html
+++ b/majorproject/index.html
@@ -93,7 +93,7 @@ img {
 			<li><a href="/majorproject/resources.html">Resources</a></li>		
 		</ul>
 	</nav>
-<p style="border: 2px solid DarkSlateBlue; padding: 5px; background-color: GhostWhite;">Note: This site is for demo purposes only! To contact us, please visit our active website, <a href="http://www.prowritingwhidbey.com">ProWritingWhidbey.com</a>.</p>
+<p style="border: 2px solid DarkSlateBlue; padding: 5px; background-color: GhostWhite;">Note: This site is for demo purposes only! To contact us, please visit our active website, <a href="http://www.prowritingwhidbey.com" target="_blank">ProWritingWhidbey.com</a>.</p>
 <section>
 <h1>Welcome to<br>Pro Writing Whidbey!</h1>
 	<img src="DPBridge2.jpg" alt="Deception Pass Bridge">
@@ -142,6 +142,7 @@ img {
 </footer>
 </body>
 </html>
+
 
 
 
