--- a/majorproject/about.html
+++ b/majorproject/about.html
@@ -68,14 +68,13 @@ img {
 				<ul>
 			<li><a href="/majorproject/about.html">About Us</a></li>
 					<li><a href="/majorproject/faq.html">FAQ</a></li>
-					<li><a href="/majorproject/portfolio.html">Portfolio</a></li>
 				</ul>
 			</li>
-			<li><a href="/majorproject/contact.html">Contact Us</a></li>
 			<li><a href="/majorproject/resources.html">Resources</a></li>	
 		</ul>
 	</nav>
 	<!-- HTML elements here -->
+<p style="border: 2px solid DarkSlateBlue; padding: 5px; background-color: GhostWhite;">Note: This site is for demo purposes only! To contact us, please visit our active website, <a href="http://www.prowritingwhidbey.com" target="_blank">ProWritingWhidbey.com</a>.</p>
 <section>
 <h2>About Us</h2>
 <p>Pro Writing Whidbey was founded in 2025 with the aim of making professional writing, editing, and web design services more accessible to small business owners, who may find dealing with large-scale contracting agencies intimidating or cost-prohibitive.</p>
@@ -99,6 +98,7 @@ img {
 </footer>
 </body>
 </html>
+
 
 
 
