--- a/majorproject/resources.html
+++ b/majorproject/resources.html
@@ -69,13 +69,12 @@ img {
 				<ul>
 			<li><a href="/majorproject/about.html">About Us</a></li>
 					<li><a href="/majorproject/faq.html">FAQ</a></li>
-					<li><a href="/majorproject/portfolio.html">Portfolio</a></li>
 				</ul>
 			</li>
-			<li><a href="/majorproject/contact.html">Contact Us</a></li>
 			<li><a href="/majorproject/resources.html">Resources</a></li>
 		</ul>
 	</nav>
+<p style="border: 2px solid DarkSlateBlue; padding: 5px; background-color: GhostWhite;">Note: This site is for demo purposes only! To contact us, please visit our active website, <a href="http://www.prowritingwhidbey.com" target="_blank">ProWritingWhidbey.com</a>.</p>
 <section>
 <h2>DIY Resources</h2>
 <img src="Library.jpg" alt="library bookshelf">
