--- a/majorproject/web.html
+++ b/majorproject/web.html
@@ -92,13 +92,12 @@ th {
 				<ul>
 			<li><a href="/majorproject/about.html">About Us</a></li>
 					<li><a href="/majorproject/faq.html">FAQ</a></li>
-					<li><a href="/majorproject/portfolio.html">Portfolio</a></li>
 				</ul>
 			</li>
-			<li><a href="/majorproject/contact.html">Contact Us</a></li>
 			<li><a href="/majorproject/resources.html">Resources</a></li>		
 		</ul>
 	</nav>
+<p style="border: 2px solid DarkSlateBlue; padding: 5px; background-color: GhostWhite;">Note: This site is for demo purposes only! To contact us, please visit our active website, <a href="http://www.prowritingwhidbey.com" target="_blank">ProWritingWhidbey.com</a>.</p>
 	<!-- HTML elements here -->
 <section>
 <h2>Web Design</h2>
@@ -137,6 +136,7 @@ Photo by <a href="https://unsplash.com/@uxindo?utm_source=unsplash&utm_medium=re
 </footer>
 </body>
 </html>
+
 
 
 
