--- a/majorproject/editing.html
+++ b/majorproject/editing.html
@@ -133,7 +133,7 @@ th {
 			</tr>
 		</table>
 		<p><i>Please note: All prices shown are estimates and may vary slightly depending on the exact nature of specific projects.</i></p>
-		<p>Please <a href="/majorproject/contact.html">contact us</a> for information about editing of projects other than text-based documents, or if you are unsure about which type of editing would best suit your needs.</p>
+		<p>Please contact us for information about editing of projects other than text-based documents, or if you are unsure about which type of editing would best suit your needs.</p>
 		<h3>Service Details:</h3>
 		<p><b>General Assessment -</b> Reading over a document and giving general feedback on the content, layout, etc. No specific edits provided.</p>
 		<p><b>Proofreading -</b> A "fresh eyes" check on a document that has usually already been edited, as a final check to be sure it is ready for publication. Any necessary edits will be submitted.</p>
@@ -152,6 +152,7 @@ th {
 </footer> 
 </body> 
 </html>
+
 
 
 
