--- a/majorproject/about.html
+++ b/majorproject/about.html
@@ -78,7 +78,7 @@ img {
 <section>
 <h2>About Us</h2>
 <p>Pro Writing Whidbey was founded in 2025 with the aim of making professional writing, editing, and web design services more accessible to small business owners, who may find dealing with large-scale contracting agencies intimidating or cost-prohibitive.</p>
-<p>We offer a more approachable option, with personalized services designed to support small businesses, wherever they may be located. Check out our <a href="/majorproject/writing.html">Writing</a>, <a href="/majorproject/editing.html">Editing</a>, and <a href="/majorproject/web.html">Web Design</a> pages for more information on specific services, or <a href="/majorproject/contact.html">contact us</a> if you have questions! </p>
+<p>We offer a more approachable option, with personalized services designed to support small businesses, wherever they may be located. Check out our <a href="/majorproject/writing.html">Writing</a>, <a href="/majorproject/editing.html">Editing</a>, and <a href="/majorproject/web.html">Web Design</a> pages for more information on specific services, or contact us if you have questions! </p>
 <h3>Meet the Team</h3>
 	<div class="container">
 		<div>
@@ -98,6 +98,7 @@ img {
 </footer>
 </body>
 </html>
+
 
 
 
