--- a/majorproject/faq.html
+++ b/majorproject/faq.html
@@ -80,7 +80,7 @@ img {
 <div class="container">
 	<div>
 		<h3>What is your process for completing projects?</h3>
-		<p>First step is to <a href="/majorproject/contact.html">Contact Us</a> with as much information as possible about your project. From there, we will work with you to hash out specific details, plus agree on a timeline and (if applicable) rate of payment. When the final draft is approved, you will receive the relevant finished product(s) and an invoice.</p>
+		<p>First step is to contact us with as much information as possible about your project. From there, we will work with you to hash out specific details, plus agree on a timeline and (if applicable) rate of payment. When the final draft is approved, you will receive the relevant finished product(s) and an invoice.</p>
 		<h3>Do you offer other services besides what is listed here?</h3>
 		<p>Absolutely! Our website lists only the most common examples, but we can do just about any type of project that uses the written word to convey information. We can also do some graphic design projects, such as infographics.</p>
 		<h3>What forms of payment do you accept?</h3>
@@ -88,7 +88,7 @@ img {
 		<h3>Where exactly is Whidbey Island? Do you only work with local clients?</h3>
 		<p>Whidbey Island is just off the coast of western Washington State, in the US, a little bit northwest of Seattle. So long as the work can be done remotely, we will happily work with clients anywhere!</p>
 		<h3>Do you offer discounts for Non-Profit Organizations?</h3>
-		<p>Yes! If your project is for a verified non-profit organization, please note that when you fill out our <a href="/majorproject/contact.html">contact form</a>.</p>
+		<p>Yes! If your project is for a verified non-profit organization, please note that when you fill out our contact form.</p>
 	</div>
 	<div>
 		<img src="Question.jpg" alt="question mark">
@@ -104,6 +104,7 @@ Photo by <a href="https://unsplash.com/@two_tees?utm_source=unsplash&utm_medium=
 </footer>
 </body>
 </html>
+
 
 
 
